[project]
name = "maskLib"
version = "0.1"
description = "A package for making superconducting circuit designs"
dependencies = [
    "dxfwrite",
    "numpy",
    "matplotlib",
    "ezdxf",
    "openpyxl",
    "klayout",
]

[project.optional-dependencies]
extra = ["gdspy", "opencv-python"]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]